# my-labs

./: .gitignore  CMakeLists.txt
lab-1-encapsulation/: CMakeLists.txt  c-matrix.cpp  c-matrix.h  cpp-matrix.cpp  cpp-matrix.h  main.cpp
lab-10-graph/: CMakeLists.txt  graph.h  locality.h  main.cpp
lab-2-operator-overload/: CMakeLists.txt  bin-image.cpp  bin-image.h  main.cpp
lab-3-st-polymorph/: CMakeLists.txt  main.cpp  my-list.h  my-vector.h  shared-ptr.h  unique-ptr.h
lab-4-dn-polymorph/: CMakeLists.txt  ellipse.cpp  ellipse.h  figure.h  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  trapeze.cpp  trapeze.h  triangle.cpp  triangle.h
lab-6-sorts/: CMakeLists.txt  main.cpp  sorts.h
lab-8-ds/: CMakeLists.txt  main.cpp  ordered-set.h  ordered-vector.h  unordered-set.h
libutils/: CMakeLists.txt
libutils/include/libutils/: bin-image.h  io.h
libutils/src/: bin-image.cpp  io.cpp
